--- a/Ex3_Dessin/app/src/main/res/layout/activity_main.xml
+++ b/Ex3_Dessin/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.pam.examen2.MainActivity">
 
+    <com.pam.ex3_dessin.DrawView
+        android:id="@+id/drawView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnClear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
